# OFMLHackathon

./: .coveragerc  .editorconfig  .gitattributes  .gitignore  AUTHORS.rst  CHANGELOG.rst  CMakeLists.txt  MANIFEST.in  Makefile  README.md  README.rst  README2.md  build_deps.sh  config.yaml  conftest.py  foamBO.py  getSLURMJOBStatus.sh  ofml_june2025.md  pyproject.toml  requirements-dev.txt  requirements.txt  requirements.yml  setup.cfg  setup.py  setup_env.sh  setup_test_env.sh  silc.pc.in  silcConfig.cmake.in
2023-01/smartsim/smartredis/: .gitignore  .pylintrc  CMakeLists.txt  CONTRIBUTING.md  MANIFEST.in  Makefile  README.md  codecov.yml  conftest.py  pyproject.toml  requirements-dev.txt  requirements.txt  setup.cfg  setup.py  setup_test_env.sh  smartredis_defs.cmake
2023-01/smartsim/smartredis/.github/workflows/: build_wheels.yml  release.yml  run_post_merge_tests.yml  run_static_and_examples.yml  run_tests.yml  run_tests_uds.yml
2023-01/smartsim/smartredis/archive/: README.txt  slurm_cluster.py
2023-01/smartsim/smartredis/build-scripts/: build-redisai-cpu.sh  build_deps.sh  build_fortran_tests.sh
2023-01/smartsim/smartredis/doc/: Doxyfile_c  Doxyfile_cpp  advanced_topics.rst  changelog.rst  conf.py  data_structures.rst  dataset_conversions.rst  index.rst  installation.rst  overview.rst  runtime.rst
2023-01/smartsim/smartredis/doc/clients/: c-plus.rst  c.rst  fortran.rst  python.rst
2023-01/smartsim/smartredis/doc/developer/: testing.rst
2023-01/smartsim/smartredis/doc/examples/: cpp_api_examples.rst  fortran_api_examples.rst  (+1 more)
2023-01/smartsim/smartredis/examples/: CMakeLists.txt  test_examples.py
2023-01/smartsim/smartredis/images/: Dockerfile  build.sh
2023-01/smartsim/smartredis/include/: address.h  addressallcommand.h  addressanycommand.h  addressatcommand.h  c_client.h  c_dataset.h  c_logcontext.h  c_logger.h  client.h  command.h  command.tcc  commandlist.h  commandlist.tcc  commandreply.h  compoundcommand.h  configoptions.h  dataset.h  dbinfocommand.h  dbnode.h  enum_fortran.inc  gettensorcommand.h  keyedcommand.h  logcontext.h  logger.h  metadata.h  metadatabuffer.h  metadatafield.h  multikeycommand.h  nonkeyedcommand.h  pipelinereply.h  pyclient.h  pyconfigoptions.h  pydataset.h  pylogcontext.h  pysrobject.h  redis.h  rediscluster.h  redisserver.h  scalarfield.h  scalarfield.tcc  (+14 more)
2023-01/smartsim/smartredis/tests/: CMakeLists.txt
2023-01/smartsim/smartredis/utils/: launch_redis.py
2023-07/deep-reinforcement-learning/gymprecice/: .gitignore  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml  setup.py
2023-07/deep-reinforcement-learning/gymprecice/gymprecice/: core.py  version.py
2023-07/deep-reinforcement-learning/gymprecice/tests/: mocked_precice.py  test_core.py
conda/: build.sh  (+1 more)
examples/parallel/cpp/: CMakeLists.txt  example_utils.h  silc_mnist.cpp  silc_put_get_3D.cpp  silc_put_get_contiguous_3D.cpp  smartredis_mnist.cpp  smartredis_put_get_3D.cpp
examples/serial/c/: CMakeLists.txt  c_client_example_utils.h  client_test_put_get_3D.c  client_test_put_unpack_1D.c  example_put_get_3D.c  example_put_unpack_1D.c
examples/serial/cpp/: CMakeLists.txt  silc_dataset.cpp  silc_mnist.cpp  silc_model.cpp  silc_put_get_3D.cpp  silc_put_get_contiguous_3D.cpp  smartredis_dataset.cpp  smartredis_mnist.cpp  smartredis_model.cpp  smartredis_put_get_3D.cpp
examples/serial/fortran/: CMakeLists.txt  silc_dataset.F90  silc_mnist.F90  silc_put_get_3D.F90  silc_put_get_unpack_dataset.F90  smartredis_dataset.F90  smartredis_put_get_3D.F90
src/python/: CMakeLists.txt
src/python/bindings/: bind.cpp
src/python/module/silc/: __init__.py  client.py  dataset.py  error.py  util.py
src/python/module/smartredis/: __init__.py  client.py  dataset.py  error.py  logcontext.py  srobject.py  util.py
src/python/src/: CMakeLists.txt  def_build_config.cpp  def_myclass.cpp  main.cpp  pyclient.cpp  pydataset.cpp  pylogcontext.cpp
src/python/tests/: test_build_configuration.py
tests/c/: CMakeLists.txt  c_client_test_utils.h  client_test_dataset_exists.c  client_test_put_get_1D.c  client_test_put_get_2D.c  client_test_put_get_3D.c  client_test_put_unpack_1D.c  test_c_client.py
tests/cpp/: CMakeLists.txt  CMakeLists.txt.cpp.cpp  client_test_binary.cpp  client_test_binary_2D.cpp  client_test_copy_dataset.cpp  client_test_dataset.cpp  client_test_dataset_aggregation.cpp  client_test_dataset_copy_assignment.cpp  client_test_dataset_copy_constructor.cpp  client_test_dataset_empty.cpp  client_test_dataset_move_assignment.cpp  client_test_dataset_move_constructor.cpp  client_test_dataset_multiple_get_tensor.cpp  client_test_dataset_no_meta.cpp  client_test_dataset_no_tensors.cpp  client_test_delete_dataset.cpp  client_test_ensemble.cpp  client_test_ensemble_dataset.cpp  client_test_mnist.cpp  client_test_mnist_dataset.cpp  client_test_mnist_scaling.cpp  client_test_put_get_1D.cpp  client_test_put_get_2D.cpp  client_test_put_get_3D.cpp  client_test_put_get_3D_static_values.cpp  client_test_put_get_contiguous_3D.cpp  client_test_put_get_transpose_3D.cpp  client_test_rename_dataset.cpp  client_test_utils.h  crc_inverse.cpp  dataset_test_utils.h  test_cpp_client.py
tests/cpp/unit-tests/: CMakeLists.txt  main.cpp  test_addressanycommand.cpp  test_addressatcommand.cpp  test_aggregation_list.cpp  test_client.cpp  test_client_ensemble.cpp  test_clusterinfocommand.cpp  test_command.cpp  test_commandlist.cpp  test_commandreply.cpp  test_compoundcommand.cpp  test_dataset.cpp  test_dbinfocommand.cpp  test_dbnode.cpp  test_logger.cpp  test_metadata.cpp  test_multikeycommand.cpp  test_redisserver.cpp  test_singlekeycommand.cpp  test_ssdb.cpp  test_stringfield.cpp  test_tensor.cpp  test_tensorbase.cpp  test_unit_cpp_client.py
tests/fortran/: CMakeLists.txt  client_test_dataset.F90  client_test_ensemble.F90  client_test_initialized.F90  client_test_misc_tensor.F90  client_test_mnist.F90  client_test_mnist_multigpu.F90  client_test_put_get_1D.F90  client_test_put_get_2D.F90  client_test_put_get_3D.F90  client_test_put_get_unpack_dataset.F90  test_fortran_client.py  test_utils.F90
(+1195 files in other folders)
