[metadata]
name = smartredis
version = 0.1.0
description = RedisAI clients for SmartSim
long_description = file: README.md
long_description_content_type=text/markdown

url = https://github.com/CrayLabs/SmartRedis
project_urls =
    Source = https://github.com/CrayLabs/SmartRedis
    Documentation = https://github.com/CrayLabs/SmartRedis

author = Matt Ellis, Sam Partee, Alessandro Rigazzi
author_email =  matthew.ellis@hpe.com
contact = Matt Ellis
contact_email = matthew.ellis@hpe.com
license = BSD 3-Clause License
keywords = redis, clients, hpc, ai, deep learning
classifiers =
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    License :: OSI Approved :: BSD License
    Intended Audience :: Science/Research
    Topic :: Scientific/Engineering

[options]
package_dir=
    =src/python/module
packages=find:
setup_requires =
    setuptools>=39.2
    cmake>=3.10
include_package_data = True
install_requires =
    numpy>=1.18.2

python_requires = >=3.7


[options.extras_require]
dev =
    cmake>=3.10
    numpy>=1.18.2
    sphinx==3.1.1
    sphinx_rtd_theme>=0.5.0
    pytest>=6.0.0
    pytest-cov==2.10.1
    black==20.8b1
    isort==5.6.4
    pylint==2.6.0
    breathe==4.25.1
    torch==1.7.1
    sphinx-fortran==1.1.1

[options.packages.find]
where=src/python/module
