[metadata]
name = smartredis
version = 0.3.1
description = RedisAI clients for SmartSim
long_description = file: README.md
long_description_content_type=text/markdown

url = https://github.com/CrayLabs/SmartRedis
project_urls =
    Source = https://github.com/CrayLabs/SmartRedis
    Documentation = https://www.craylabs.org

author = CrayLabs, a Hewlett Packard Enterprise OSS Organization
author_email = craylabs@hpe.com
contact = CrayLabs, a Hewlett Packard Enterprise OSS Organization
contact_email = craylabs@hpe.com
license = BSD 2-Clause License
keywords = redis, clients, hpc, ai, deep learning
classifiers =
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    License :: OSI Approved :: BSD License
    Intended Audience :: Science/Research
    Topic :: Scientific/Engineering

[options]
package_dir=
    =src/python/module
packages=find:
setup_requires =
    setuptools>=39.2
include_package_data = True
install_requires =
    numpy>=1.18.2

python_requires = >=3.7


[options.extras_require]
dev =
    numpy>=1.18.2
    pytest>=6.0.0
    pytest-cov==2.10.1
    black==20.8b1
    isort==5.6.4
    pylint==2.6.0
    torch==1.7.1

doc=
    sphinx==3.1.1
    sphinx-fortran==1.1.1
    sphinx_rtd_theme>=0.5.0
    breathe==4.25.1


[options.packages.find]
where=src/python/module
